--- a/index.html
+++ b/index.html
@@ -51,5 +51,6 @@
         <span class='part yellow-donut'></span>
     
     </section>
+    <script type='module' src="./src/index.js"></script>
 </body>
 </html>
