--- a/index.html
+++ b/index.html
@@ -41,15 +41,16 @@
     </section>
     
     <section id='caterpillar-dog'>
-        <img class='head' src="./assets/dogHead.png" alt="dog head image">
-        <span class='part blue-donut'></span>
+        <span> 
+            <img class='head' src="./assets/dogHead.png" alt="dog head image">
+        </span>      
+        <!-- <span class='part blue-donut'></span>
         <span class='part brown-donut'></span>
         <span class='part choc-donut'></span>
         <span class='part green-donut'></span>
         <span class='part light-pink-donut'></span>
         <span class='part pink-donut'></span>
-        <span class='part yellow-donut'></span>
-    
+        <span class='part yellow-donut'></span> -->
     </section>
     <script type='module' src="./src/index.js"></script>
 </body>
