double checked code

--- a/index.html
+++ b/index.html
@@ -41,16 +41,17 @@
     </section>
     
     <section id='caterpillar-dog'>
-        <span> 
-            <img class='head' src="./assets/dogHead.png" alt="dog head image">
-        </span>      
-        <!-- <span class='part blue-donut'></span>
+        <img class='head' src="./assets/dogHead.png" alt="dog head image">
+
+        <!-- donuts all laid out 
+        <<span class='part blue-donut'></span>
         <span class='part brown-donut'></span>
         <span class='part choc-donut'></span>
         <span class='part green-donut'></span>
         <span class='part light-pink-donut'></span>
         <span class='part pink-donut'></span>
         <span class='part yellow-donut'></span> -->
+
     </section>
     <script type='module' src="./src/index.js"></script>
 </body>
