dance buttons in

--- a/index.html
+++ b/index.html
@@ -51,6 +51,30 @@
         <span class='part light-pink-donut'></span>
         <span class='part pink-donut'></span>
         <span class='part yellow-donut'></span> -->
+    </section>
+
+    <section>
+        <button class="dance" value="blue-dance">
+            BLUE
+        </button>
+        <button class="dance" value="brown-dance">
+            BROWN
+        </button>
+        <button class="dance" value="choc-dance">
+            CHOC
+        </button>
+        <button class="dance" value="green-dance">
+            GREEN
+        </button>
+        <button class="dance" value="light-pink-dance">
+            LIGHT PINK
+        </button>
+        <button class="dance" value="pink-dance">
+            PINK
+        </button>
+        <button class="dance" value="yellow-dance">
+            YELLOW
+        </button>
 
     </section>
     <script type='module' src="./src/index.js"></script>
