--- a/index.html
+++ b/index.html
@@ -42,15 +42,15 @@
     
     <section id='caterpillar-dog'>
         <img class='head' src="./assets/dogHead.png" alt="dog head image">
-
+        
         <!-- donuts all laid out 
-        <<span class='part blue-donut'></span>
-        <span class='part brown-donut'></span>
-        <span class='part choc-donut'></span>
-        <span class='part green-donut'></span>
-        <span class='part light-pink-donut'></span>
-        <span class='part pink-donut'></span>
-        <span class='part yellow-donut'></span> -->
+        <span class='part blue-donut dancing'></span>
+        <span class='part brown-donut dancing'></span>
+        <span class='part choc-donut dancing'></span>
+        <span class='part green-donut dancing'></span>
+        <span class='part light-pink-donut dancing'></span>
+        <span class='part pink-donut dancing'></span>
+        <span class='part yellow-donut dancing'></span> -->
     </section>
 
     <section>
